--- a/projects/angular-filter-dropdown/src/lib/filter-dropdown.component.html
+++ b/projects/angular-filter-dropdown/src/lib/filter-dropdown.component.html
@@ -1,4 +1,4 @@
-<div class="filter-dropdown-container">
+<div class="filter-dropdown-container" [class]="customCssClass">
   <!-- Filter Button -->
   <button 
     mat-raised-button 
